--- a/links/links.html
+++ b/links/links.html
@@ -12,12 +12,14 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@https://twitter.com/mrhadizadeh">
 	<meta name="twitter:creator" content="@https://twitter.com/mrhadizadeh">
-	<meta name="twitter:title" content="Intel_visit_Sep20_2022">
-	<meta name="twitter:url" content="https:/intel-csu.github.io/blog/files/Intel_visit_Sep22_2022.html">
+	<meta name="twitter:title" content="Useful Links | Intel Semiconductor Education Program at Central State University">
+	<meta name="twitter:image" content="https://intel-csu.github.io/resources/body.jpg">
+	<meta name="twitter:url" content="https://intel-csu.github.io/links/links.html">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Intel Semiconductor Education Program at Central State University">
-	<meta property="og:title" content="Intel_visit_Sep20_2022">
-	<meta property="og:url" content="https:/intel-csu.github.io/blog/files/Intel_visit_Sep22_2022.html">
+	<meta property="og:title" content="Useful Links | Intel Semiconductor Education Program at Central State University">
+	<meta property="og:image" content="https://intel-csu.github.io/resources/body.jpg">
+	<meta property="og:url" content="https://intel-csu.github.io/links/links.html">
 
 		<!-- User defined head content -->
 		
@@ -25,10 +27,10 @@
 		<!-- Meta tags -->
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-		<title>Intel visit to CSU campus | Intel_visit_Sep8_2022</title>
+		<title>Useful Links | Intel Semiconductor Education Program at Central State University</title>
 
 		<!-- CSS stylesheets reset -->
-	  <link rel="stylesheet" type="text/css" media="all" href="../../rw_common/themes/tesla/consolidated.css" />
+	  <link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/tesla/consolidated-2.css" />
 		
 
 		<!-- CSS for the Foundation framework's CSS that handles the responsive columnized layout -->
@@ -44,16 +46,16 @@
 		
 
 		<!-- Base RapidWeaver javascript -->
-		<script type="text/javascript" src="../../rw_common/themes/tesla/javascript.js"></script>
+		<script type="text/javascript" src="../rw_common/themes/tesla/javascript.js"></script>
 
 		<!-- jQuery 1.8 is included in the theme internally -->
-	  <script src="../../rw_common/themes/tesla/js/jquery.min.js"></script>
+	  <script src="../rw_common/themes/tesla/js/jquery.min.js"></script>
 
 	  <!-- Theme specific javascript, along with jQuery Easing and a few other elements -->
-	  <script src="../../rw_common/themes/tesla/js/elixir.js"></script>
+	  <script src="../rw_common/themes/tesla/js/elixir.js"></script>
 
 		<!-- Style variations -->
-		<script src="../../rw_common/themes/tesla/js/sidebar/sidebar_hidden.js"></script>
+		<script src="../rw_common/themes/tesla/js/sidebar/sidebar_hidden.js"></script>
 		
 
 		<!-- User defined styles -->
@@ -63,9 +65,7 @@
 		
 
 		<!-- Plugin injected code -->
-		<link rel="alternate" type="application/rss+xml" title="My RSS Feed" href="https://intel-csu.github.io/blog/files/feed.xml" />
-<script type="text/javascript" async src="https://intel-csu.github.io/blog/files/meta.js"></script>
-
+		
 
 
 	</head>
@@ -118,7 +118,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 				<div id="navigation_bar">
 					<div class="row site_width">
 						<div class="large-12 columns">
-							<nav id="top_navigation"><ul><li><a href="../../" rel="">Home</a></li><li><a href="../blog.html" rel="" id="current">Blog</a></li><li><a href="../../links/links.html" rel="">Useful Links</a></li></ul></nav>
+							<nav id="top_navigation"><ul><li><a href="../" rel="">Home</a></li><li><a href="../blog/blog.html" rel="">Blog</a></li><li><a href="links.html" rel="" id="current">Useful Links</a></li></ul></nav>
 						</div>
 					</div>
 				</div>
@@ -139,25 +139,24 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 			<i id="mobile_navigation_toggle_icon" class="fa fa-bars"></i>
 		</div>
 		<nav id="mobile_navigation">
-			<ul><li><a href="../../" rel="">Home</a></li><li><a href="../blog.html" rel="" id="current">Blog</a></li><li><a href="../../links/links.html" rel="">Useful Links</a></li></ul>
+			<ul><li><a href="../" rel="">Home</a></li><li><a href="../blog/blog.html" rel="">Blog</a></li><li><a href="links.html" rel="" id="current">Useful Links</a></li></ul>
 		</nav>
 
 		<!-- Main Content area and sidebar -->
 		<div class="row site_width" id="container">
 			<section id="content"class="large-8 columns">
-					
-	<div class="blog-archive-entries-wrapper">
-		<div id="unique-entry-id-1" class="blog-entry"><h1 class="blog-entry-title">Intel visit to CSU campus</h1><div class="blog-entry-date">20/09/22 00:43 </div><div class="blog-entry-summary"></div><div class="blog-entry-body"><span style="font-size:14px; color:#000000;">Melinda Murdock (University Relations Manager, Intel Corp.) and Pia Wilson-Body (President of Intel Foundation) </span><span style="font-size:14px; ">visited the CSU campus on September 20, 2022.<br /></span><p style="text-align:center;"><img class="imageStyle" alt="20220920_102526" src="20220920_102526.jpg" width="826" height="620" /></p></div></div>
-	</div>
-	
-
+				<span style="font-size:14px; "><br /></span><h3>Organizations:</h3><span style="font-size:14px; font-weight:bold; ">&mdash; </span><span style="font-size:14px; font-weight:bold; "><a href="https://nanohub.org/groups/semiconductoreducation" target="_blank">nanoHUB.org</a></span><span style="font-size:14px; ">: semiconductor education & workforce development (simulation-based immersive learning, courses, virtual labs),<br />&mdash; </span><span style="font-size:14px; color:#000000;font-weight:bold; "><a href="http://www.semi.org" target="_blank">Semi.org</a></span><span style="font-size:14px; color:#000000;">:</span><span style="font-size:14px; color:#000000;"> an industry association comprising companies involved in the electronics design and manufacturing supply chain.</span><span style="font-size:14px; "><br /><br /><br /></span><h3>Open-source textbooks:</h3><span style="font-size:14px; "> &mdash; </span><span style="font-size:14px; color:#000000;"><a href="https://ohiolink.oercommons.org/courses/semiconductor-devices-theory-and-application" target="_blank">Semiconductor Devices: Theory and Application</a></span><span style="font-size:14px; color:#000000;"><br /></span><span style="font-size:14px; "><br /></span>
 			</section>
 			<aside id="sidebar" class="large-4 columns">
 				<!-- Sidebar content -->
 				<h4 id="sidebar_title"></h4>
-				<div id="sidebar_content"></div>
+				<div id="sidebar_content"><a class="myBadge twitter" href="http://twitter.com/elixirgraphics"></a>
+
+<a class="myBadge facebook" href="http://facebook.com"></a>
+
+<a class="myBadge dribbble" href="http://dribbble.com/elixir"></a></div>
 				<div id="archives">
-					<div id="blog-archives"><a class="blog-archive-link-enabled" href="archive-september-2022.html">September 2022</a><br /></div><div id="blog-rss-feeds"><a class="blog-rss-link" href="feed.xml" rel="alternate" type="application/rss+xml" title="My RSS Feed">RSS Feed</a><br /></div>
+					
 				</div>
 			</aside>
 		</div>
@@ -166,7 +165,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 		<footer class="row site_width">
 			<div id="footer_content" class="large-12 columns">
 				<div id="breadcrumb_container">
-					<i class="fa fa-folder-open-o"></i> <span id="breadcrumb"><ul><li><a href="../../">Home</a>&nbsp;>&nbsp;</li><li><a href="../blog.html">Blog</a>&nbsp;>&nbsp;</li></ul></span>
+					<i class="fa fa-folder-open-o"></i> <span id="breadcrumb"><ul><li><a href="../">Home</a>&nbsp;>&nbsp;</li><li><a href="links.html">Useful Links</a>&nbsp;>&nbsp;</li></ul></span>
 				</div>
 				&copy; 2022 MR Hadizadeh <a href="#" id="rw_email_contact">Contact Me</a><script type="text/javascript">var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":mh";var _rwObsfuscatedHref3 = "adi";var _rwObsfuscatedHref4 = "zad";var _rwObsfuscatedHref5 = "eh_";var _rwObsfuscatedHref6 = "AT_";var _rwObsfuscatedHref7 = "cen";var _rwObsfuscatedHref8 = "tra";var _rwObsfuscatedHref9 = "lst";var _rwObsfuscatedHref10 = "ate";var _rwObsfuscatedHref11 = ".ed";var _rwObsfuscatedHref12 = "u";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9+_rwObsfuscatedHref10+_rwObsfuscatedHref11+_rwObsfuscatedHref12; document.getElementById("rw_email_contact").href = _rwObsfuscatedHref;</script>
 			</div>
@@ -188,8 +187,8 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 			});
 		</script>
 
-	<rapidweaver-badge url="https://www.realmacsoftware.com" position-x="left" position-y="bottom" transition="slide" delay-type="time" delay="1000" mode="auto" target="_blank"><img src= "../../rw_common/assets/RWBadge.png" alt="RapidWeaver Icon" /><p>Made in RapidWeaver</p></rapidweaver-badge>
-<script src="../../rw_common/assets/rw-badge.js"></script>
+	<rapidweaver-badge url="https://www.realmacsoftware.com" position-x="left" position-y="bottom" transition="slide" delay-type="time" delay="1000" mode="auto" target="_blank"><img src= "../rw_common/assets/RWBadge.png" alt="RapidWeaver Icon" /><p>Made in RapidWeaver</p></rapidweaver-badge>
+<script src="../rw_common/assets/rw-badge.js"></script>
 </body>
 
 </html>
