--- a/links/links.html
+++ b/links/links.html
@@ -12,12 +12,12 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@https://twitter.com/mrhadizadeh">
 	<meta name="twitter:creator" content="@https://twitter.com/mrhadizadeh">
-	<meta name="twitter:title" content="Useful Links | Intel Semiconductor Education Program at Central State University">
+	<meta name="twitter:title" content="Intel CSU - Links">
 	<meta name="twitter:image" content="https://intel-csu.github.io/resources/body.jpg">
 	<meta name="twitter:url" content="https://intel-csu.github.io/links/links.html">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Intel Semiconductor Education Program at Central State University">
-	<meta property="og:title" content="Useful Links | Intel Semiconductor Education Program at Central State University">
+	<meta property="og:title" content="Intel CSU - Links">
 	<meta property="og:image" content="https://intel-csu.github.io/resources/body.jpg">
 	<meta property="og:url" content="https://intel-csu.github.io/links/links.html">
 
@@ -27,7 +27,7 @@
 		<!-- Meta tags -->
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
-		<title>Useful Links | Intel Semiconductor Education Program at Central State University</title>
+		<title>Intel CSU - Links</title>
 
 		<!-- CSS stylesheets reset -->
 	  <link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/tesla/consolidated-2.css" />
