--- a/links/links.html
+++ b/links/links.html
@@ -72,7 +72,18 @@
 
 	<!-- This page was created with RapidWeaver from Realmac Software. http://www.realmacsoftware.com -->
 
-	<body><!-- Default Statcounter code for Intel CSU
+	<body><!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://www.centralstate.edu/semiconductors'" />
+  </head>
+  <body>
+    <p>You will be redirected to https://www.centralstate.edu/semiconductors soon!</p>
+  </body>
+</html>
+
+
+<!-- Default Statcounter code for Intel CSU
 https://hadizadeh.github.io/Intel_CSU/ -->
 <script type="text/javascript">
 var sc_project=12802427; 
@@ -118,7 +129,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 				<div id="navigation_bar">
 					<div class="row site_width">
 						<div class="large-12 columns">
-							<nav id="top_navigation"><ul><li><a href="../" rel="">Home</a></li><li><a href="../blog/blog.html" rel="">Blog</a></li><li><a href="links.html" rel="" id="current">Useful Links</a></li></ul></nav>
+							<nav id="top_navigation"><ul><li><a href="../" rel="">Home</a></li><li><a href="../blog/blog.html" rel="">News</a></li><li><a href="links.html" rel="" id="current">Useful Links</a></li></ul></nav>
 						</div>
 					</div>
 				</div>
@@ -139,7 +150,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 			<i id="mobile_navigation_toggle_icon" class="fa fa-bars"></i>
 		</div>
 		<nav id="mobile_navigation">
-			<ul><li><a href="../" rel="">Home</a></li><li><a href="../blog/blog.html" rel="">Blog</a></li><li><a href="links.html" rel="" id="current">Useful Links</a></li></ul>
+			<ul><li><a href="../" rel="">Home</a></li><li><a href="../blog/blog.html" rel="">News</a></li><li><a href="links.html" rel="" id="current">Useful Links</a></li></ul>
 		</nav>
 
 		<!-- Main Content area and sidebar -->
@@ -163,7 +174,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 				<div id="breadcrumb_container">
 					<i class="fa fa-folder-open-o"></i> <span id="breadcrumb"><ul><li><a href="../">Home</a>&nbsp;>&nbsp;</li><li><a href="links.html">Useful Links</a>&nbsp;>&nbsp;</li></ul></span>
 				</div>
-				&copy; 2022 MR Hadizadeh <a href="#" id="rw_email_contact">Contact Me</a><script type="text/javascript">var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":mh";var _rwObsfuscatedHref3 = "adi";var _rwObsfuscatedHref4 = "zad";var _rwObsfuscatedHref5 = "eh_";var _rwObsfuscatedHref6 = "AT_";var _rwObsfuscatedHref7 = "cen";var _rwObsfuscatedHref8 = "tra";var _rwObsfuscatedHref9 = "lst";var _rwObsfuscatedHref10 = "ate";var _rwObsfuscatedHref11 = ".ed";var _rwObsfuscatedHref12 = "u";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9+_rwObsfuscatedHref10+_rwObsfuscatedHref11+_rwObsfuscatedHref12; document.getElementById("rw_email_contact").href = _rwObsfuscatedHref;</script>
+				&copy; 2022 MR Hadizadeh <a href="#" class="9801C260-7FFF-4851-A563-F509A6E35D20">Contact Me</a><script type="text/javascript">(function(){ var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":mh";var _rwObsfuscatedHref3 = "adi";var _rwObsfuscatedHref4 = "zad";var _rwObsfuscatedHref5 = "eh_";var _rwObsfuscatedHref6 = "AT_";var _rwObsfuscatedHref7 = "cen";var _rwObsfuscatedHref8 = "tra";var _rwObsfuscatedHref9 = "lst";var _rwObsfuscatedHref10 = "ate";var _rwObsfuscatedHref11 = ".ed";var _rwObsfuscatedHref12 = "u";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9+_rwObsfuscatedHref10+_rwObsfuscatedHref11+_rwObsfuscatedHref12; Array.from(document.getElementsByClassName("9801C260-7FFF-4851-A563-F509A6E35D20")).forEach(function(x){x.href = _rwObsfuscatedHref});})()</script>
 			</div>
 		</footer>
 
