--- a/links/links.html
+++ b/links/links.html
@@ -22,7 +22,7 @@
 	<meta property="og:url" content="https://intel-csu.github.io/links/links.html">
 
 		<!-- User defined head content -->
-		
+		<meta http-equiv="Refresh" content="0; url='https://www.centralstate.edu/semiconductors'" />
 
 		<!-- Meta tags -->
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
@@ -72,16 +72,7 @@
 
 	<!-- This page was created with RapidWeaver from Realmac Software. http://www.realmacsoftware.com -->
 
-	<body><!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="7; url='https://www.centralstate.edu/semiconductors'" />
-  </head>
-  <body>
-    <p>You will be redirected to https://www.centralstate.edu/semiconductors soon!</p>
-  </body>
-</html>
-
+	<body><meta http-equiv="Refresh" content="0; url='https://www.centralstate.edu/semiconductors'" />
 
 <!-- Default Statcounter code for Intel CSU
 https://hadizadeh.github.io/Intel_CSU/ -->
@@ -174,7 +165,7 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 				<div id="breadcrumb_container">
 					<i class="fa fa-folder-open-o"></i> <span id="breadcrumb"><ul><li><a href="../">Home</a>&nbsp;>&nbsp;</li><li><a href="links.html">Useful Links</a>&nbsp;>&nbsp;</li></ul></span>
 				</div>
-				&copy; 2022 MR Hadizadeh <a href="#" class="9801C260-7FFF-4851-A563-F509A6E35D20">Contact Me</a><script type="text/javascript">(function(){ var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":mh";var _rwObsfuscatedHref3 = "adi";var _rwObsfuscatedHref4 = "zad";var _rwObsfuscatedHref5 = "eh_";var _rwObsfuscatedHref6 = "AT_";var _rwObsfuscatedHref7 = "cen";var _rwObsfuscatedHref8 = "tra";var _rwObsfuscatedHref9 = "lst";var _rwObsfuscatedHref10 = "ate";var _rwObsfuscatedHref11 = ".ed";var _rwObsfuscatedHref12 = "u";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9+_rwObsfuscatedHref10+_rwObsfuscatedHref11+_rwObsfuscatedHref12; Array.from(document.getElementsByClassName("9801C260-7FFF-4851-A563-F509A6E35D20")).forEach(function(x){x.href = _rwObsfuscatedHref});})()</script>
+				&copy; 2022 MR Hadizadeh <a href="#" class="C5654A8B-D6D4-4967-A8FD-51DB18DA7D80">Contact Me</a><script type="text/javascript">(function(){ var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":mh";var _rwObsfuscatedHref3 = "adi";var _rwObsfuscatedHref4 = "zad";var _rwObsfuscatedHref5 = "eh_";var _rwObsfuscatedHref6 = "AT_";var _rwObsfuscatedHref7 = "cen";var _rwObsfuscatedHref8 = "tra";var _rwObsfuscatedHref9 = "lst";var _rwObsfuscatedHref10 = "ate";var _rwObsfuscatedHref11 = ".ed";var _rwObsfuscatedHref12 = "u";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7+_rwObsfuscatedHref8+_rwObsfuscatedHref9+_rwObsfuscatedHref10+_rwObsfuscatedHref11+_rwObsfuscatedHref12; Array.from(document.getElementsByClassName("C5654A8B-D6D4-4967-A8FD-51DB18DA7D80")).forEach(function(x){x.href = _rwObsfuscatedHref});})()</script>
 			</div>
 		</footer>
 
